<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一线牵</string>
    <string name="version_info">一线牵\n\nVersion 1.0.0</string>
    <string name="day_recommend">一线牵每天为你创造4次相遇的机会，您可以点击“怦然心动”或者“跳过”。每天只能对一个人心动。</string>
    <string name="recommend_help1">一线牵致力于为在校大学生寻找自己的另一半，在这里可以记录生活中最难忘的点点滴滴。</string>
    <string name="recommend_help2">如果您是单身，一线牵 将扮演一个牵线搭桥的月老角色。</string>
    <string name="recommend_help3">每天为您创造4次与ta相遇的机会，您可以选择“怦然心动”或“跳过”。</string>
    <string name="recommend_help4">为了确保真心，您只能对其中1个人心动。</string>
    <string name="recommend_help5">如果您对某一位怦然心动，我们将给Ta推送一条爱情验证消息。</string>
    <string name="recommend_help6">除非ta也对您“怦然心动”，否则，你们无法取得联系。</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="no_chat">暂时没有新消息</string>
    <string name="no_request">暂时没有人对您怦然心动</string>
    <string name="text_ack_msg">已读</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="prompt">提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="connect_failuer_toast">连接不到服务器，请稍后重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete">删除</string>
    <string name="sharetext">分享到</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="version_name">当前版本：v-</string>
    <string name="can_not_find_version_name">获取版本号失败</string>

</resources>