<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_radius"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/prompt"
            android:textColor="#333"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/alert_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical|left"
            android:padding="5dp"
            android:textColor="#333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:singleLine="true"
            android:textColor="#444"
            android:textSize="16sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="fitCenter"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_cancel_bj"
            android:gravity="center"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="#666666"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_selector"
            android:gravity="center"
            android:onClick="ok"
            android:text="@string/ok"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>