<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/share_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radius"
            android:paddingBottom="8dp" >

            <TextView
                android:id="@+id/sharetext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/sharetext"
                android:textColor="#888888"
                android:textSize="@dimen/day_recommend_user_font" />

            <GridView
                android:id="@+id/share_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sharetext"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:listSelector="@drawable/sel_white_gray"
                android:numColumns="4"
                android:stretchMode="columnWidth" >
            </GridView>
        </RelativeLayout>

        <TextView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/context_menu_cancel"
            android:clickable="true"
            android:gravity="center"
            android:onClick="delete"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/delete"
            android:textColor="@color/system_female"
            android:textSize="@dimen/day_recommend_user_font" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/context_menu_cancel"
            android:clickable="true"
            android:gravity="center"
            android:onClick="cancel"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/cancel"
            android:textColor="@color/system_female"
            android:textSize="@dimen/day_recommend_user_font" />
    </LinearLayout>

</RelativeLayout>